fix: adjust layout to avoid horizontal scrolling

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,8 +3,7 @@
   top: 0;
   left: 0;
   background-color: #22B9EC;
-  width: 100%;
-  padding: 10px;
+  padding: 10px 0;
 
   h1 {
     text-align: center;
